Update 'rgggvdl9g-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:7970468850f595f4ba3ee49c60d73017c7c9b7e9@sha256:c2b072eacd57cbbff5590fd17a3b92ea7bffc9ea2962b3c19f26f6d55375e3b5

--- a/components/rgggvdl9g-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/rgggvdl9g-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rgggvdl9g-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:7970468850f595f4ba3ee49c60d73017c7c9b7e9@sha256:c2b072eacd57cbbff5590fd17a3b92ea7bffc9ea2962b3c19f26f6d55375e3b5
+          name: container-image
